--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard de Criptos Brayan</title>
+    <meta 
+      name="description" 
+      content="Un dashboard interactivo para seguir en tiempo real el precio y las tendencias de las principales criptomonedas como Bitcoin, Ethereum y más." 
+    />
   </head>
   <body>
     <div id="root"></div>
